--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_GITHUB_TOKEN=
+NEXT_PUBLIC_GITHUB_TOKEN=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
+HOST_URL=http://localhost:3000
